--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@packetpay/express": "^0.1.0",
+    "authrite-express": "^0.2.4",
+    "babbage-bsv": "^0.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "sendover": "^1.1.5",
+    "utxoninja": "^0.2.49"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
