--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "lint": "standard --fix ."
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "utxoninja": "^0.2.49"
   },
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.21",
+    "standard": "^17.0.0"
   }
 }
