--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "mysql": "^2.18.1",
     "openai": "^3.2.1",
     "sendover": "^1.1.5",
     "utxoninja": "^0.2.49"
