--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "mysql": "^2.18.1",
+    "ninja-base": "^0.2.104",
     "openai": "^3.2.1",
-    "sendover": "^1.1.21",
-    "utxoninja": "^0.2.49"
+    "sendover": "^1.1.21"
   },
   "devDependencies": {
     "nodemon": "^2.0.21",
